리스트 아이템 html 수정

--- a/index.html
+++ b/index.html
@@ -57,15 +57,46 @@
         <div class="list-container">
             <ol>
                 <div class="animate__animated animate__fadeInLeft list-element font-BMDOHYEON">
-                    <h3 class="list-element-title">
-                        title
-                    </h3>
-                    <p class="list-element-document">
-                        document<br>
-                        ...
-                    </p>
-                    <p class="list-element-moreinfo"></p>
+                    <div class="list-element-image-container">
+                        <img class="list-element-image" src="https://flexible.img.hani.co.kr/flexible/normal/700/1040/imgdb/original/2021/0428/20210428504000.jpg" alt="Product Image">
+                    </div>
+                    <div class="list-element-details">
+                        <div class="list-element-top">
+                            <h3 class="list-element-title">
+                                Product Name
+                            </h3>
+                            <div class="test-top-distance-container">
+                                <center >
+                                    <p class="list-element-distance">
+                                        매장 거리<br>
+                                    </p>
+                                    <p class="test-km">
+                                        2.5km
+                                    </p>
+                                </center>
+                            </div>
+                        </div>
+                        <div class="list-element-middle">
+                            <p class="list-element-store">
+                                Store Name
+                            </p>
+                            <p class="list-element-address">
+                                Store Address
+                            </p>
+                        </div>
+                        <div class="list-element-top">
+                            <div class="list-element-bottom">
+                                <p class="list-element-sale">
+                                    10%
+                                </p>
+                                <p class="list-element-price">
+                                    10,000원
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                
             </ol>
         </div>
         <div class="animate__animated animate__zoomIn clothes-list-title">
