--- a/test.html
+++ b/test.html
@@ -3,60 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .container {
-            display: flex;
-            justify-content: center;
-            position: relative;
-        }
-
-        .main-div {
-            width: 100px;
-            height: 100px;
-            background-color: lightblue;
-            text-align: center;
-            line-height: 100px;
-            cursor: pointer;
-            transition: transform 0.5s;
-            position: relative;
-        }
-
-        .toggle-div {
-            width: 100px;
-            height: 100px;
-            background-color: lightcoral;
-            text-align: center;
-            line-height: 100px;
-            display: none;
-            transition: transform 0.5s;
-            position: absolute;
-            top: 0;
-            left: 100px;
-        }
-    </style>
+    <title>스크롤 애니메이션 리스트</title>
+    <link rel="stylesheet" href="test.css">
 </head>
 <body>
     <div class="container">
-        <div class="main-div">Click me!</div>
-        <div class="toggle-div">I'm here!</div>
+        <ul class="animated-list">
+            <li class="item">항목 1</li>
+            <li class="item">항목 2</li>
+            <li class="item">항목 3</li>
+            <li class="item">항목 4</li>
+            <li class="item">항목 5</li>
+            <li class="item">항목 1</li>
+            <li class="item">항목 2</li>
+            <li class="item">항목 3</li>
+            <li class="item">항목 4</li>
+            <li class="item">항목 5</li>
+        </ul>
     </div>
-
-    <script>
-        const mainDiv = document.querySelector(".main-div");
-        const toggleDiv = document.querySelector(".toggle-div");
-        let isOpen = false;
-
-        mainDiv.addEventListener("click", () => {
-            if (!isOpen) {
-                toggleDiv.style.display = "block";
-                toggleDiv.style.transform = "translateX(-100px)";
-                isOpen = true;
-            } else {
-                toggleDiv.style.transform = "translateX(0)";
-                toggleDiv.style.display = "none";
-                isOpen = false;
-            }
-        });
-    </script>
+    <script src="test.js"></script>
 </body>
 </html>
