--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
         </div>
         <!-- 상품 이름 -->
-        <p id="product-info-product-name">지구를 지키는 옷</p>
+        <p id="product-info-product-name">KAZEL SVERTH</p>
         <div id="product-info-product-price-div">
             <p id="product-info-product-discount-price">22,860원</p>
             <div id="product-info-product-discount-div">
@@ -115,6 +115,9 @@
         <div id="product-info-loca-contanior">
             <p id="product-info-loca">위치</p>
             <div id="product-info-loca-map"></div>
+        </div>
+        <div id="product-info-reservation-contanior">
+            <p id="product-info-reservation">예약하기</p>
         </div>
     </div>
     <script src="./src/js/productInfo.js"></script>
